-deleted redunant <p>. * Fixed 'options__maintext' to avoid content displacement (text overflow)

--- a/1/css/mobileDevices.css
+++ b/1/css/mobileDevices.css
@@ -22,24 +22,24 @@
 
 .mobileDevices__text{
     font-family: 'source-sans-pro';
-    padding-top: 30px;
+    padding-top: 15px;
     padding-left: 70px;
-    width: 60%;
+    width: 65%;
+    height: 90%;
     font-size: 20px;
     margin-left: 250px;
+    position: relative;
 }
 
-.mobileDevices__text--header-top{
-    color: white;
-}
-
-.mobileDevices__text--header-bottom{
+.mobileDevices__text--header-top, .mobileDevices__text--header-bottom{
     color: white;
 }
 
 .mobileDevices__text--maintext{
     color: #fab905;
     text-align: justify;
+    overflow: auto;
+    height: 40%;
 }
 
 .mobileDevices__button {
@@ -54,4 +54,9 @@
 
 .mobileDevices__button:hover {
     background: violet;
+}
+
+.mobileDevices__button-link{
+    display: block;
+    margin: 10px 0px;
 }
